--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "ahooks": "^2.5.0",
     "antd": "^4.6.2",
+    "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
+    "perfect-scrollbar": "^1.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
@@ -24,7 +27,8 @@
     "redux-actions": "^2.6.5",
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.6.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "underscore": "^1.11.0"
   },
   "scripts": {
     "start": "craco start",
@@ -49,11 +53,13 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.161",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux-actions": "^2.6.1",
     "@types/redux-logger": "^3.0.8",
     "@types/redux-promise": "^0.5.29",
+    "@types/underscore": "^1.10.22",
     "autoprefixer": "^9.8.6",
     "craco-alias": "^2.1.1",
     "postcss-cli": "^7.1.2",
