--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/react-dom": "^16.9.0",
     "ahooks": "^2.5.0",
     "antd": "^4.6.2",
+    "axios": "^0.20.0",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
+    "nprogress": "^0.2.0",
     "perfect-scrollbar": "^1.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -54,6 +56,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.161",
+    "@types/nprogress": "^0.2.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux-actions": "^2.6.1",
